# pandora_data_fusion

./: .jenkins.yml
data_fusion/: CMakeLists.txt  interfaces.xml  package.xml  tests.cmake
data_fusion/config/alert_handler/: alert_handler_dynamic.cfg  alert_handler_topics.yaml  mass_alert_publisher_dymamic.cfg
data_fusion/include/alert_handler/: alert_handler.h  defines.h  object_handler.h  objects.h  utils.h  victim.h  victim_clusterer.h  victim_handler.h
data_fusion/launch/: alert_handler.launch  data_fusion.launch  data_fusion_stand_alone.launch  data_fusion_test.launch  victim_fusion.launch
data_fusion/launch/test/: staticArmBase2headCamera.launch
data_fusion/src/alert_handler/: alert_handler.cpp
data_fusion/test/: mass_alert_publisher.py
data_fusion_communications/: CMakeLists.txt  package.xml
data_fusion_communications/msg/: VictimInfoMsg.msg  VictimsMsg.msg
data_fusion_communications/srv/: GetMarkersSrv.srv  (+1 more)
frame_matcher/: CMakeLists.txt  frame_matcher_plugins.xml  package.xml
frame_matcher/include/frame_matcher/: candidate_hole_postprocessor.h  enhanced_image_postprocessor.h  frame_matcher.h  keypoint_transformer.h  matcher_preprocessor.h  matcher_processor.h  points_on_frame.h  roi_transformer.h  view_pose_finder.h
frame_matcher/launch/: frame_matcher.launch  pandora_frame_matcher.launch
frame_matcher/src/: frame_matcher.cpp  keypoint_transformer.cpp  matcher_preprocessor.cpp  matcher_processor.cpp  roi_transformer.cpp  view_pose_finder.cpp
frame_matcher/src/plugins/: candidate_hole_postprocessor.cpp  enhanced_image_postprocessor.cpp  enhanced_image_preprocessor.cpp
frame_matcher/test/: CMakeLists.txt
frame_matcher/test/functional/: frame_matcher_functional.py
frame_matcher/test/functional/launch/: frame_matcher_test.launch
pandora_alert_handler/: CMakeLists.txt  package.xml  tests.cmake
pandora_alert_handler/config/alert_handler/: AlertHandler.cfg  alert_handler_dynamic.cfg  alert_handler_params.yaml  alert_handler_topics.yaml  mass_alert_publisher_dymamic.cfg
pandora_alert_handler/config/pandora_alert_handler/: AlertHandler.cfg  alert_handler_params.yaml
pandora_alert_handler/include/alert_handler/: alert_handler.h  base_object.h  co2.h  const_iterator_const_ref.h  data_matrix.h  defines.h  exceptions.h  face.h  filter_model.h  hazmat.h  hole.h  kalman_object.h  landoltc.h  motion.h  object.h  object_factory.h  object_handler.h  object_list.h  objects.h  obstacle.h  pose_finder.h  qr.h  sound.h  tf_finder.h  tf_listener.h  thermal.h  utils.h  victim.h  victim_clusterer.h  victim_handler.h  victim_list.h
pandora_alert_handler/include/pandora_alert_handler/: alert_handler.h  object_factory.h
pandora_alert_handler/include/pandora_alert_handler/handlers/: object_handler.h  victim_clusterer.h  victim_handler.h
pandora_alert_handler/include/pandora_alert_handler/object_lists/: object_list.h  obstacle_list.h  victim_list.h
pandora_alert_handler/include/pandora_alert_handler/objects/: barrel.h  co2.h  data_matrix.h  hard_obstacle.h  hazmat.h  hole.h  landoltc.h  motion.h  objects.h  obstacle.h  qr.h  soft_obstacle.h  sound.h  thermal.h  victim.h  victim_image.h  visual_victim.h
pandora_alert_handler/include/pandora_alert_handler/objects/object_interface/: base_object.h  kalman_object.h  object.h
pandora_alert_handler/include/pandora_data_fusion_utils/: filter_model.h  utils.h
pandora_alert_handler/launch/: alert_handler.launch  pandora_alert_handler.launch
pandora_alert_handler/src/: alert_handler.cpp  barrel.cpp  base_object.cpp  co2.cpp  data_matrix.cpp  face.cpp  filter_model.cpp  hard_obstacle.cpp  hazmat.cpp  hole.cpp  landoltc.cpp  main.cpp  motion.cpp  object_factory.cpp  object_handler.cpp  objects.cpp  obstacle.cpp  pose_finder.cpp  qr.cpp  ros_tf_listener.cpp  soft_obstacle.cpp  sound.cpp  thermal.cpp  tpa.cpp  utils.cpp  victim.cpp  victim_clusterer.cpp  victim_handler.cpp  victim_image.cpp  victim_list.cpp
pandora_alert_handler/src/pandora_alert_handler/: alert_handler.cpp
pandora_alert_handler/src/pandora_alert_handler/handlers/: object_handler.cpp  victim_clusterer.cpp  victim_handler.cpp
pandora_alert_handler/src/pandora_alert_handler/object_lists/: obstacle_list.cpp  victim_list.cpp
pandora_alert_handler/src/pandora_alert_handler/objects/: barrel.cpp  co2.cpp  data_matrix.cpp  hard_obstacle.cpp  hazmat.cpp  hole.cpp  landoltc.cpp  motion.cpp  obstacle.cpp  qr.cpp  soft_obstacle.cpp  sound.cpp  thermal.cpp  victim.cpp  victim_image.cpp  visual_victim.cpp
pandora_alert_handler/src/pandora_data_fusion_utils/: filter_model.cpp  utils.cpp
pandora_alert_handler/src/pose_finder/: pose_finder.cpp
pandora_alert_handler/test/: CMakeLists.txt  hazmat_test.cpp  object_factory_test.cpp  object_list_test.cpp
pandora_alert_handler/test/functional/: alert_delivery.py  alert_handler_static_test.launch  alert_handler_static_test.py  alert_handler_test.launch  mass_alert_publisher.py
pandora_alert_handler/test/functional/orders/: frequent_order.in  mixed_order.in
pandora_alert_handler/test/map_loader/src/: map_loader.cpp
pandora_alert_handler/test/test_maps/: map1.yaml
pandora_alert_handler/test/unit/: hazmat_test.cpp  object_factory_test.cpp  object_list_test.cpp  objects_test.cpp  pose_finder_test.cpp  qr_test.cpp  utils_test.cpp  victim_clusterer_test.cpp  victim_list_test.cpp  victim_test.cpp
pandora_data_fusion/: package.xml
pandora_data_fusion_launchers/: package.xml
pandora_data_fusion_msgs/: CMakeLists.txt  package.xml
pandora_data_fusion_utils/: package.xml
pandora_sensor_coverage/: CMakeLists.txt  package.xml
pandora_sensor_processing/: CMakeLists.txt  package.xml
pandora_sensor_processing/test/: CMakeLists.txt
pandora_sensor_processing/test/functional/: co2_processor_test.launch  co2_processor_test.py  test_base.py  thermal_processor_test.cpp
pandora_sensor_processing/test/unit/: clusterer_test.cpp  thermal_processor_test.cpp
pandora_victim_fusion/: CMakeLists.txt  package.xml
pandora_victim_fusion/launch/: victim_fusion.launch
pose_finder/: package.xml
(+52 files in other folders)
