<package>
  <name>data_fusion</name>
  <version>0.0.0</version>
  <description>data_fusion</description>
   <maintainer email='zalidis@gmail.com'>Chris Zalidis</maintainer> 

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dataFusion</url>
   <url type="bugtracker"></url> 

  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>

   <build_depend>roscpp</build_depend> 
   <build_depend>tf</build_depend> 
   <build_depend>data_fusion_communications</build_depend> 
   <build_depend>controllers_and_sensors_communications</build_depend> 
   <build_depend>pandora_navigation_communications</build_depend> 
   <build_depend>vision_communications</build_depend> 
   <build_depend>actionlib</build_depend> 
   <build_depend>state_manager</build_depend> 
   <build_depend>pandora_navigation</build_depend> 
   <build_depend>roslint</build_depend> 
   
   <run_depend>roscpp</run_depend> 
   <run_depend>tf</run_depend> 
   <run_depend>data_fusion_communications</run_depend> 
   <run_depend>controllers_and_sensors_communications</run_depend> 
   <run_depend>pandora_navigation_communications</run_depend> 
   <run_depend>vision_communications</run_depend> 
   <run_depend>actionlib</run_depend> 
   <run_depend>state_manager</run_depend> 
   <run_depend>pandora_navigation</run_depend> 

  <export>

  </export>
</package>
