<package format="2">
  <name>frame_matcher</name>
  <version>0.0.0</version>
  <description>Contains node for transforming points from a camera's frame to another camera's frame</description>

  <maintainer email='tsirif@gmail.com'>Tsirigotis Christos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_discovery/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_discovery.git</url>

  <author>Tsirigotis Christos</author>

<!--
                           Buildtool Dependencies
                                                                            -->
  <buildtool_depend>catkin</buildtool_depend>

<!--
                           Build Dependencies
                                                                            -->

<!--
                           Exec Dependencies
                                                                            -->

<!--
                           Dependencies
                                                                            -->

<!--
                           Test Dependencies
                                                                            -->

  <export>
  </export>
</package>
