<package format="2">
  <name>frame_matcher</name>
  <version>0.0.0</version>
  <description>Contains node for transforming points from a camera's frame to another camera's frame</description>

  <maintainer email='tsirif@gmail.com'>Tsirigotis Christos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_discovery/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_discovery.git</url>

  <author>Tsirigotis Christos</author>

<!--
                           Buildtool Dependencies
                                                                            -->
  <buildtool_depend>catkin</buildtool_depend>

<!--
                           Build Dependencies
                                                                            -->
  <build_depend>roslint</build_depend>

<!--
                           Exec Dependencies
                                                                            -->

<!--
                           Dependencies
                                                                            -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>pandora_alert_handler</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

<!--
                           Test Dependencies
                                                                            -->
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslib</test_depend>
  <test_depend>python-numpy</test_depend>
  <test_depend>pandora_testing_tools</test_depend>

  <export>
  </export>
</package>
